# voice_assistent

./: .gitignore  commands_list.py  functions.py  mail_scraping.py  main.py  pyproject.toml  requirement.txt  youtube_scraping.py
