[tool.poetry]
name = "voice-assistent"
version = "0.1.0"
description = ""
authors = ["frankdelan <frank.danil704@gmail.com>"]
readme = "README.md"
packages = [{include = "voice_assistent"}]

[tool.poetry.dependencies]
python = "^3.10"
speechrecognition = "^3.8.1"
selenium = "^4.6.1"
google-api-python-client = "^2.66.0"
pyaudio = "^0.2.12"
pyttsx3 = "^2.90"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
